--- a/chat/templates/chat/room2.html
+++ b/chat/templates/chat/room2.html
@@ -21,13 +21,12 @@
 
 </head>
 <body>
-
 <div id="frame">
 	<div id="sidepanel">
 		<div id="profile">
 			<div class="wrap">
 				<img id="profile-img" src="http://emilcarlsson.se/assets/mikeross.png" class="online" alt="" />
-				<p>Mike Ross</p>
+				<p>{{normal_username}}</p>
 				<i class="fa fa-chevron-down expand-button" aria-hidden="true"></i>
 				<div id="status-options">
 					<ul>
@@ -58,8 +57,8 @@
 						<span class="contact-status busy"></span>
 						<img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="" />
 						<div class="meta">
-							<p class="name">Harvey Specter</p>
-							<p class="preview">Wrong. You take the gun, or you pull out a bigger one. Or, you call their bluff. Or, you do any one of a hundred and forty six other things.</p>
+							<p class="name">{{normal_room_name}}</p>
+							<p class="preview" id="preview"></p>
 						</div>
 					</div>
 				</li>
@@ -73,14 +72,14 @@
 	<div class="content">
 		<div class="contact-profile">
 			<img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="" />
-			<p>Harvey Specter</p>
+			<p>{{ normal_username }}</p>
 			<div class="social-media">
 				<i class="fa fa-facebook" aria-hidden="true"></i>
 				<i class="fa fa-twitter" aria-hidden="true"></i>
 				 <i class="fa fa-instagram" aria-hidden="true"></i>
 			</div>
 		</div>
-		<div class="messages">
+		<div class="messages" id="chat-area">
 			<ul id="chat-log">
 				<!-- <li class="sent">
 					<img src="http://emilcarlsson.se/assets/mikeross.png" alt="" />
@@ -92,7 +91,8 @@
 				</li> -->
 			</ul>
 		</div>
-		<div class="message-input">
+		
+		<div class="message-input" id="message-input">
 			<div class="wrap">
 			<input id="chat-message-input" type="text" placeholder="Write your message..." />
 			<i class="fa fa-paperclip attachment" aria-hidden="true"></i>
@@ -105,7 +105,8 @@
 <script src='//production-assets.codepen.io/assets/common/stopExecutionOnTimeout-b2a7b3fe212eaa732349046d8416e00a9dec26eb7fd347590fbced3ab38af52e.js'></script><script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
 
 <script>
-    const roomName = JSON.parse(document.getElementById('room-name').textContent);
+    var roomName = {{ room_name }}
+	var username = {{ username }};
 
     const chatSocket = new WebSocket(
         'ws://'
@@ -115,19 +116,24 @@
         + '/'
     );
 
+	chatSocket.onopen = function(e){
+		fetchMessages();
+	}
+
     chatSocket.onmessage = function(e) {
         var data = JSON.parse(e.data);
-        var message = data['message'];
-        var author = message['author'];
-        var msgListTag = document.createElement('li')
-        var imgTag = document.createElement('img');
-        var pTag = document.createElement('p');
-        pTag.textContent = message;
-        imgTag.src = "http://emilcarlsson.se/assets/harveyspecter.png";
-        msgListTag.className = 'sent';
-        msgListTag.appendChild(imgTag);
-        msgListTag.appendChild(pTag);
-        document.querySelector('#chat-log').appendChild(msgListTag);
+        if (data['command'] === 'messages'){
+			for (let i=data['messages'].length-1; i>=0; i--){
+				createMessage(data['messages'][i]);
+			}
+			document.getElementById("preview").innerHTML = (`${data['messages'][0].author}: ${data['messages'][0].content}`);
+			updateScroll();
+		}
+		else if (data['command'] === 'new_message'){
+			createMessage(data['message']);
+			document.getElementById("preview").innerHTML = (`${data['message'].author}: ${data['message'].content}`);
+			updateScroll();
+		}
     };
 
     chatSocket.onclose = function(e) {
@@ -145,10 +151,76 @@
         const messageInputDom = document.querySelector('#chat-message-input');
         const message = messageInputDom.value;
         chatSocket.send(JSON.stringify({
-            'message': message
+            'message': message,
+			'command': 'new_message',
+			'from' : username
         }));
         messageInputDom.value = '';
     };
+
+	function fetchMessages(){
+		chatSocket.send(JSON.stringify({'command':'fetch_messages'}));
+	}
+	
+	function createMessage(data){
+		var author = data['author'];
+        var msgListTag = document.createElement('li')
+        var imgTag = document.createElement('img');
+        var pTag = document.createElement('p');
+		pTag.textContent = data.content;
+        imgTag.src = "http://emilcarlsson.se/assets/harveyspecter.png";
+
+		if (author === username){
+			msgListTag.className = 'sent';
+		}
+		else{
+			msgListTag.className = 'replies';
+		}
+		msgListTag.appendChild(imgTag);
+        msgListTag.appendChild(pTag);
+        document.querySelector('#chat-log').appendChild(msgListTag);
+	}
+
+	function updateScroll(){
+		var element = document.getElementById("chat-area");
+		element.scrollTop = element.scrollHeight;
+	}
+
 </script>
 
+<script>
+	$(".messages").animate({ scrollTop: $(document).height() }, "fast");
+
+$("#profile-img").click(function() {
+	$("#status-options").toggleClass("active");
+});
+
+$(".expand-button").click(function() {
+  $("#profile").toggleClass("expanded");
+	$("#contacts").toggleClass("expanded");
+});
+
+$("#status-options ul li").click(function() {
+	$("#profile-img").removeClass();
+	$("#status-online").removeClass("active");
+	$("#status-away").removeClass("active");
+	$("#status-busy").removeClass("active");
+	$("#status-offline").removeClass("active");
+	$(this).addClass("active");
+	
+	if($("#status-online").hasClass("active")) {
+		$("#profile-img").addClass("online");
+	} else if ($("#status-away").hasClass("active")) {
+		$("#profile-img").addClass("away");
+	} else if ($("#status-busy").hasClass("active")) {
+		$("#profile-img").addClass("busy");
+	} else if ($("#status-offline").hasClass("active")) {
+		$("#profile-img").addClass("offline");
+	} else {
+		$("#profile-img").removeClass();
+	};
+	
+	$("#status-options").removeClass("active");
+});
+</script>
 </body></html>
