--- a/chat/templates/chat/index2.html
+++ b/chat/templates/chat/index2.html
@@ -53,28 +53,20 @@
 		<div id="contacts">
 			<ul id="rooms">
 				{% for room in rooms %}
-						{% if normal_room_name == room.room_name %}
-						<li class="contact active" id="id-{{room.id}}-submit">
-						{% else %}
-						<li class="contact" id="id-{{room.id}}-submit">
-						{% endif %}
+						<a href="{{room.room_name}}"><li class="contact" id="id-{{room.id}}-submit">
 						<div class="wrap">
 							<span class="contact-status busy"></span>
 							<img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="" />
 							<div class="meta">
 								{% if room.participants.all.count == 2 %}
-									{% for i in room.participants.all %}
-										{% if i.user != request.user %}
-											<p class="name" id="id-{{room.id}}-input">{{i}}</p>
-										{% endif %}
-									{% endfor %}
+								<p class="name" id="id-{{room.id}}-input">{{room.participants.last}}</p>
 								{% else %}
-									<p class="name" id="id-{{room.id}}-input">{{room.room_name}}</p>
+								<p class="name" id="id-{{room.id}}-input">{{room.room_name}}</p>
 								{% endif %}
 								<p class="preview" id="preview-{{room.id}}"></p>
 							</div>
 						</div>
-					</li>
+					</li></a>
 				{% endfor %}
 			</ul>
 		</div>
@@ -84,34 +76,21 @@
 		</div>
 	</div>
 	<div class="content">
-		<div class="contact-profile">
-			<img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="" />
-			<p>{{ participants }}</p>
-			<div class="social-media">
-				<i class="fa fa-facebook" aria-hidden="true"></i>
-				<i class="fa fa-twitter" aria-hidden="true"></i>
-				<i class="fa fa-instagram" aria-hidden="true"></i>
-			</div>
-		</div>
 		<div class="messages" id="chat-area">
 			<ul id="chat-log">
-				<!-- <li class="sent">
+				<li class="sent">
 					<img src="http://emilcarlsson.se/assets/mikeross.png" alt="" />
-					<p>How the hell am I supposed to get a jury to believe you when I am not even sure that I do?!</p>
+					<p>Welcome to chat index</p>
 				</li>
 				<li class="replies">
 					<img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="" />
-					<p>When you're backed against the wall, break the god damn thing down.</p>
-				</li> -->
+					<p>Click to profile in contact list you want to chat.</p>
+				</li>
+				<li class="sent">
+					<img src="http://emilcarlsson.se/assets/mikeross.png" alt="" />
+					<p>If there is no one in contact list try to have some friends and send message to them.</p>
+				</li>
 			</ul>
-		</div>
-		
-		<div class="message-input" id="message-input">
-			<div class="wrap">
-			<input id="chat-message-input" type="text" placeholder="Write your message..." />
-			<i class="fa fa-paperclip attachment" aria-hidden="true"></i>
-			<button id="chat-message-submit" class="submit"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
-			</div>
 		</div>
 	</div>
 </div>
@@ -125,101 +104,6 @@
 	$(window).on("load",function(){
 		$(".loader-wrapper").fadeOut("slow");
 	  });
-</script>
-<script>
-    var roomName = {{ room_name }}
-	var username = {{ username }};
-
-    const chatSocket = new WebSocket(
-        'ws://'
-        + window.location.host
-        + '/ws/chat/'
-        + roomName
-        + '/'
-    );
-
-	chatSocket.onopen = function(e){
-		fetchMessages();
-	}
-
-    chatSocket.onmessage = function(e) {
-        var data = JSON.parse(e.data);
-        if (data['command'] === 'messages'){
-			for (let i=data['messages'].length-1; i>=0; i--){
-				createMessage(data['messages'][i]);
-			}
-			{% for room in rooms %}
-				document.getElementById("preview-{{room.id}}").innerHTML = (`{{room.messages.all.last.author}}: {{room.messages.all.last.content}}`);
-			{% endfor %}
-			
-			updateScroll();
-		}
-		else if (data['command'] === 'new_message'){
-			createMessage(data['message']);
-			for (let i=0; i<data['rooms'].length; i++){
-				document.getElementById(`preview-${data['rooms'][i]['room_id']}`).innerHTML = (`${data['rooms'][i]['messages'][data['rooms'][i]['messages'].length - 1]['author']}: ${data['rooms'][i]['messages'][data['rooms'][i]['messages'].length - 1]['content']}`);
-			}
-			updateScroll();
-		}
-		{% for i in rooms %}
-			document.querySelector('#id-{{i.id}}-submit').onclick = function(e) {
-				window.location.pathname = '/chat/' + '{{i.room_name}}' + '/';
-			};
-		{% endfor %}
-    };
-
-    chatSocket.onclose = function(e) {
-        console.error('Chat socket closed unexpectedly');
-    };
-
-    document.querySelector('#chat-message-input').focus();
-    document.querySelector('#chat-message-input').onkeyup = function(e) {
-        if (e.keyCode === 13) {  // enter, return
-            document.querySelector('#chat-message-submit').click();
-        }
-    };
-
-    document.querySelector('#chat-message-submit').onclick = function(e) {
-        const messageInputDom = document.querySelector('#chat-message-input');
-        const message = messageInputDom.value;
-		
-        chatSocket.send(JSON.stringify({
-            'message': message,
-			'command': 'new_message',
-			'from' : username,
-			'room_name':roomName
-        }));
-        messageInputDom.value = '';
-    };
-
-	function fetchMessages(){
-		chatSocket.send(JSON.stringify({'command':'fetch_messages','room_name':roomName}));
-	}
-	
-	function createMessage(data){
-		var author = data['author'];
-        var msgListTag = document.createElement('li')
-        var imgTag = document.createElement('img');
-        var pTag = document.createElement('p');
-		pTag.textContent = data.content;
-        imgTag.src = "http://emilcarlsson.se/assets/harveyspecter.png";
-
-		if (author === username){
-			msgListTag.className = 'sent';
-		}
-		else{
-			msgListTag.className = 'replies';
-		}
-		msgListTag.appendChild(imgTag);
-        msgListTag.appendChild(pTag);
-        document.querySelector('#chat-log').appendChild(msgListTag);
-	}
-
-	function updateScroll(){
-		var element = document.getElementById("chat-area");
-		element.scrollTop = element.scrollHeight;
-	}
-
 </script>
 
 <script>
