--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -56,7 +56,7 @@
 		</div>
 		<div id="search">
 			<label for=""><i class="fa fa-search" aria-hidden="true"></i></label>
-			<input type="text" placeholder="Search contacts..." />
+			<input id="search-input" type="text" placeholder="Search contacts..." />
 		</div>
 		<div id="contacts">
 			<ul id="rooms">
