--- a/templates/account/base.html
+++ b/templates/account/base.html
@@ -11,7 +11,7 @@
   <body>
     {% block body %}
 
-    {% if messages %}
+    <!-- {% if messages %}
     <div>
       <strong>Messages:</strong>
       <ul>
@@ -20,7 +20,7 @@
         {% endfor %}
       </ul>
     </div>
-    {% endif %}
+    {% endif %} -->
 
     <!-- <div>
       <br>
