--- a/static/css/notification.css
+++ b/static/css/notification.css
@@ -4,7 +4,7 @@
     left: 0;
     right: 0;
     margin: auto;
-  
+    margin-top: 5%;
     max-width: 400px;
     padding: 6px;
     background: #cccccc;
