--- a/static/css/blog-home.css
+++ b/static/css/blog-home.css
@@ -20,3 +20,14 @@ nav #ul{
   width: 75%;
   margin-left: 10%;
 }
+
+.fa {
+  margin-left: 90%;
+  font-size: 50px;
+  cursor: pointer;
+  user-select: none;
+}
+
+.fa:hover {
+  color: darkblue;
+}
