--- a/templates/friends.html
+++ b/templates/friends.html
@@ -11,7 +11,12 @@
 <link rel="stylesheet" href="{% static 'css/notification.css' %}">
 <br><br>
 
-<h1 style="margin-left: 10%;">Friends</h1>
+{% if not profile.friends.all %}
+  <h1 style="margin-left: 10%;">You have no friend</h1>
+{% else %}
+  <h1 style="margin-left: 10%;">Friends</h1>
+{% endif %}
+
 <table class="table table-hover table-dark" id="friends_table">
     <tbody>
     {% for friend in profile.friends.all %}
